[package]
name = "tide_integration"
version = "0.1.0"
authors = ["Minghua Wu <michael.wu1107@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.116", features = ["derive"] }
async-trait = "0.1.41"
async-std = { version = "1.6.5", features = [ "attributes", ] }  

toy_rpc = {version = "0.1.0", path = "../..", default-features = false, features = ["std", "codec_json", "http_tide"]}
log = "0.4.11"
env_logger = "0.7.1"
tide = "0.13.0"

[[bin]]
name = "server"
path = "src/bin/server.rs"

[[bin]]
name = "client"
path = "src/bin/client.rs" 
