[package]
name = "tokio_tcp"
version = "0.1.0"
authors = ["minghuaw <michael.wu1107@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "server"
path = "src/bin/server.rs"

[[bin]]
name = "client"
path = "src/bin/client.rs" 

[dependencies]
# tokio = { version = "1", features = ["rt-multi-thread", "macros", ] }
tokio = { version = "1.6.0", features = ["rt-multi-thread", "macros", "net", "sync", "time", "io-util"]}
log = "0.4.14"
env_logger = "0.8.3"
async-trait = "0.1.50"
anyhow = "1.0.42"

[dependencies.toy-rpc]
path = "../../toy-rpc/"
version = "0.8.1"
default-features = false
features = [ "serde_json", "tokio_runtime", "server", "client", "anyhow"]
