[package]
name = "tokio_tls"
version = "0.1.0"
authors = ["minghuaw <michael.wu1107@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "server"
path = "src/bin/server.rs"

[[bin]]
name = "client"
path = "src/bin/client.rs" 

[dependencies]
anyhow = "1.0.41"
env_logger = "0.8.4"
rustls = "0.19.1"
tokio = { version = "1.6.1", features = ["rt-multi-thread", "macros", "net"] }
toy-rpc = {version = "0.7.1", path = "../../toy-rpc", features = ["tokio_runtime", "tls", "server", "client"]}
