[package]
name = "warp_tls"
version = "0.1.0"
authors = ["minghuaw <michael.wu1107@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# futures = "0.3.12"
pretty_env_logger = "0.4.0"
tokio = { version = "1.4.0", features = ["rt-multi-thread", "macros"] }
warp = { version = "0.3.0", features = ["tls"] }

toy-rpc = {version = "0.8.3", path = "../../toy-rpc", features = [ "http_warp", "server", "client", "tls"]}
# toy-rpc = { version = "0.7.5", features = ["http_warp", "server", "client"] }
async-trait = "0.1.42"
serde = { version = "1.0.123", features = ["derive"] }
rustls = "0.19.1"
# async-std = { version = "1.9.0", features = ["attributes"] }


[[bin]]
name = "server"
path = "src/bin/server.rs"

[[bin]]
name = "client"
path = "src/bin/client.rs" 
