[package]
name = "websocket"
version = "0.1.0"
authors = ["minghuaw <michael.wu1107@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "server"
path = "src/bin/server.rs"

[[bin]]
name = "client"
path = "src/bin/client.rs" 

[dependencies]
async-trait = "0.1.42"
env_logger = "0.8.2"
futures = "0.3.12"
log = "0.4.14"
serde = { version = "1.0.123", features = ["derive"] }
# async-std = { version = "1.9.0", features = [ "attributes", ] }  
# toy-rpc = { version = "0.6.0-beta", path = "../../toy-rpc", default-features = false, features = ["std", "serde_bincode", "async_std_runtime"] }
tokio = { version = "1.4.0", features = ["rt", "rt-multi-thread", "macros", "net", "sync"] }
toy-rpc = { version = "0.6.0-beta", path = "../../toy-rpc", default-features = false, features = ["std", "serde_bincode", "tokio_runtime"] }


