[package]
name = "websocket"
version = "0.1.0"
authors = ["minghuaw <michael.wu1107@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "server"
path = "src/bin/server.rs"

[[bin]]
name = "client"
path = "src/bin/client.rs" 

[features]
default = [
    "tokio_runtime"
]

async_std_runtime = ["toy-rpc/async_std_runtime", "toy-rpc/ws_async_std", "async-std"]
tokio_runtime = ["toy-rpc/tokio_runtime", "toy-rpc/ws_tokio", "tokio"]

[dependencies]
anyhow = "1.0.40"
cfg-if = "1.0.0"
env_logger = "0.8.3"
log = "0.4.14"
serde = { version = "1.0.125", features = ["derive"] }
async-std = { version = "1.9.0", features = [ "attributes", ], optional = true }
tokio = { version = "1.6.0", features = ["rt-multi-thread", "macros", "net", "sync", "time", "io-util"], optional = true }
async-trait = "0.1.50"

[dependencies.toy-rpc]
path = "../../toy-rpc/"
version = "0.8.0"
default-features = false
features = [ "serde_bincode", "server", "client"]
optional = true
